<resources>
    // App
    <string name="app_name">Staff sharing</string>
    <string name="app_logo">App logo</string>
    <string name="app_version">version %1$s.%2$d</string>

    // Errors
    <string name="error_app_package_not_found">Cannot be found application package</string>
    <string name="error_enter_login_or_password_is_empty">Login or password is empty. Please fill it or register</string>
    <string name="error_enter_user_not_registered">User with this login and password is not found. Please, register</string>
    <string name="error_reg_password_and_repeat_not_equal">Password and repeat password are not equal</string>

    // Enter
    <string name="enter_title">Enter</string>
    <string name="enter_looking_for_staff">Looking for staff</string>
    <string name="enter_looking_for_work">Looking for work</string>
    <string name="enter_offer_staff">Offer staff</string>
    <string name="enter_registration">Registration</string>
    <string name="enter_login">Login</string>
    <string name="enter_password">Password</string>
    <string name="enter_enter">Enter</string>

    // Reg
    <string name="reg_title">Registration</string>
    <string name="reg_login">Login</string>
    <string name="reg_password">Password</string>
    <string name="reg_repeat">Repeat password</string>
    <string name="reg_company">Company</string>
    <string name="reg_employee">Employee</string>

    // Company
    <string name="company_name">Company name</string>
    <string name="company_id">Company ID</string>
    <string name="company_save">Save</string>

    // Employee
    <string name="employee_surname">Surname</string>
    <string name="employee_name">Name</string>
    <string name="employee_patronymic">Patronymic</string>
    <string name="employee_id">Document ID</string>
    <string name="employee_save">Save</string>

    // Offer
    <string name="offer_title">Offer staff</string>

    // Staff
    <string name="staff_title">Looking for staff</string>

    // Work
    <string name="work_title">Looking for work</string>

    // Profile
    <string name="profile_title">Profile</string>
</resources>
