<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editEmployeeSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/employee_surname"
        android:inputType="textPersonName"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editEmployeeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/employee_name"
        android:inputType="textPersonName"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editEmployeePatronymic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/employee_patronymic"
        android:inputType="textPersonName"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editEmployeeId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/employee_id"
        android:inputType="textPersonName"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/buttonEmployeeSave"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onEmployeeSave"
        android:text="@string/employee_save"
        android:textAllCaps="false" />
</LinearLayout>