<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.reg.RegActivity">

    <EditText
        android:id="@+id/editLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/reg_login"
        android:inputType="textPersonName"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_password"
        android:inputType="textPassword"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_repeat"
        android:inputType="textPassword"
        tools:ignore="Autofill" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:tabIndicator="@color/orange"
        app:tabIndicatorColor="@color/orange"
        app:tabIndicatorHeight="50dp"
        app:tabInlineLabel="false"
        app:tabPadding="5dp"
        app:tabRippleColor="@color/brown"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/brown"
        app:tabUnboundedRipple="false"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>